--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,9 @@
   color: rgb(255, 255, 255);
 }
 .overview {
-  width: 900px;
-  background-color: rgb(170, 131, 77);
-  padding: 20px;
-  border-radius: 10px;
-  margin-left: 50px;
+  width: 1080px;
+  padding: 10px;
+  margin-left: 0px;
   margin-top: 50px;
 }
 
@@ -25,7 +23,7 @@
   padding: 20px;
   border-radius: 10px;
   margin-left: 50px;
-  margin-top: 50px;
+  margin-top: 150px;
 }
 
 .problemstatement {
@@ -54,7 +52,9 @@
   margin-top: 50px;
 }
 
-img {
-  width: 200px;
+#image1 {
+  width: 700px;
   float: left;
+  padding: 50px;
+  border-radius: 10px;
 }
